include_directories(
    "${PROJECT_SOURCE_DIR}/XEngine/Api"
    "${CMAKE_CURRENT_SOURCE_DIR}/Common"
    "${CMAKE_CURRENT_SOURCE_DIR}/Interface"
    "${CMAKE_CURRENT_SOURCE_DIR}/Proto"
)


file(GLOB Common "${CMAKE_CURRENT_SOURCE_DIR}/Common/*.*")
file(GLOB Interface "${CMAKE_CURRENT_SOURCE_DIR}/Interface/*.*")

file(GLOB LibProtobufLinux "${CMAKE_CURRENT_SOURCE_DIR}/Library/Protobuf/Linux/*.a")

file(GLOB Proto
    "${CMAKE_CURRENT_SOURCE_DIR}/Proto/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Proto/*.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Proto/*.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/Proto/*.cc"
    "${CMAKE_CURRENT_SOURCE_DIR}/Proto/*.cpp"
)

if(WIN32)
    set(LibProtobuf
        "${CMAKE_CURRENT_SOURCE_DIR}/Library/Protobuf/Windows/*.lib"
    )
elseif(UNIX)
    set(LibProtobuf
        ${LibProtobufLinux}
    )
endif()

#enable_language(CUDA)
#Components
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Db)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/CacheClient)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/TilemapManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SQLCache)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ServerManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Config)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Fsm)

#Gate
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Gate)

#Game
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Game)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/PlayerManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/CharacterManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/LevelManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Backpack)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Combat)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Movement)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/GameWorld)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SceneManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/NpcManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SkillManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/BuffManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/GameEntitySync)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Relation)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/TaskManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RefreshRules)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/MonsterManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/BossManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/TeamManager)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/MatchManager)
#Cache
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Cache)
