
include_directories(
    "${CMAKE_CURRENT_SOURCE_DIR}/General"
)

file(GLOB General "General/*.*")

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Connecter)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Gate)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Lobby)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/GameServer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Monitor)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Cache)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Location)